    - deal with connection refused errors properly
    - use shorter default socket timeout to avoid hangs when
      the screenshot site is unavailable
  * softwarecenter/db/database.py:
    - require explicit open() to avoid possible race (LP: #449385)
  * softwarecenter/view/widgets/imagedialog.py:
    - fix crash when unknown error happend during screenshot download
      (LP: #4479829)

  [ Josh Holland ]
  * Fixed up man page (LP: #448896)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Oct 2009 13:10:45 +0200

software-center (0.5.1) karmic; urgency=low

  * icon updates from Kenneth Wimer 
  * softwarecenter/db/update.py: 
    - fix index bug in pkgname handling
  * make screenshots scrollable (LP: #439420)
  * fix reopen() handling by not using xapian.Database.reopen()
    but instead do a full open of the db (LP: #430603)
  * softwarecenter/view/appdetailsview.py:
    - add support for http proxies (LP: #446069)
    - fix crash in cdrom handling (LP: #446269)
    - do not show error when a transaction is cancelt 
      (LP: #440941)
  * softwarecenter/view/widgets/imagedialog.py:
    - change default window size to match the default image
      size from screenshots.debian.net (LP: #445938)
  * debian/control:
    - depend on the latest aptdaemon for working proxy support

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Oct 2009 18:25:10 +0200

software-center (0.5.0) karmic; urgency=low

  * softwarecenter/db/update.py:
    - when using getdefaultlocale() change the order of the environment
      variable that are checked to 'LANGUAGE','LANG','LC_CTYPE','LC_ALL'
      LP: #444316
  * add support RTL in the webkit widgets
  * Merged from Matthew McGowan:
    - better integration of the arrow button with the used theme
    - update arrow button when style changes (supports high contrast
      themes and somesuch now too)
    - support RTL langauges with the arrow button
    - new pathbar can be activated via SOFTWARE_CENTER_NEW_PATHBAR=1